# Riverbraid-Core

./: .anchor  .anchor.asc  .gitattributes  .gitignore  .state  .stationary_lock  ARCH-MAP.md  AUDIT-MANIFEST.sha256  AUDIT-TRAIL.ndjson  AUTHORITY.md  BACKGROUND.md  BACKUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  GOVERNANCE.md  LIMITATIONS.md  MANIFEST.json  MEMORY.json  MEMORY.sealed.json  MERKLE_ROOT  MERKLE_ROOT.bak  OWNERSHIP.md  PROTOCOL.md  PUBLIC_EVIDENCE.md  README.md  RELEASE.manifest.json  RESEARCH_SPEC.md  RING.md  RIVERBRAID-SPEC.md  SEAL-RECORD.md  SECURITY.md  SHA256SUMS  SOURCE_INTEGRITY.txt  SOVEREIGN_SPEC.md  STATIONARY_STATE.md  SUPPORT.md  TRUTH.SEAL  VECTORS_ATTESTATION_V1.json  (+70 more)
Go44/: .Convergence.aux  .Core.aux  .Extract.aux  .Invariants.aux  .Safety.aux  Convergence.v  Core.v  Extract.v  Extraction.v  GeneratedConstraints.v  Ingestion.v  Invariants.v  Safety.v  _CoqProject  main.cmx  main.ml  riverbraid_vm  ssg_vm.cmx  ssg_vm.ml  ssg_vm.mli
PROOFS/: resonance.proof  resonance.proof.asc  v1.5.0_resonance_proof.json  v1.5.0_resonance_proof.json.asc
anchors/: core.anchor
constitutional/: DURABILITY.md  LAYER-INVARIANTS.md  NEUTRAL-LAYERS.md  RESILIENCE.md  SCOPE.md  SEAL-RECORD.md  SURVIVABILITY.md  guard_execution.sh  integrity.js
docs/: CORE_IMPLEMENTATION_PLAN.md  SHAPE-FILTER.md  SHAPE-FILTER.md.asc
lib/: sync-map.json  v.cjs
proofs/: action.proof.json  audio.proof.json  vision.proof.json
riverbraid-types/: 28  Cargo.toml
riverbraid-types/src/: lib.rs
runtime/: sim.ml
scripts/: audit-ledger.js  (+1 more)
(+36 files in other folders)
